# olcPixelGameEngine_Examples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Git_branching.md  LICENSE  README.md  generate_LICENSE_and_README.py  mkBuild.sh  post-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/docs/: definitions.md
.github/workflows/: cpp-tests.yml
code/: CMakeLists.txt  gcc_x64_toolchain.cmake
code/lib-olc/: CMakeLists.txt
code/lib-physics/: CMakeLists.txt
code/lib-physics/api/: Ball.hpp
code/lib-physics/src/: Ball.cpp
code/test/: CMakeLists.txt
code/test/src/: BallTest.cpp
docs/: README.md
docs/01_Requirements/: System_Requirements.md
docs/02_Architecture/: SW_Architecture.md
docs/03_Process/: Backlog.md  Coding_Guideline.md  TDD_Guide.md  coding_guidelines.py
